# backend/cmd/main.go
@@ -4,6 +4,7 @@ import (
 	_ "3d-backend/docs"
 	"3d-backend/internal"
 	"3d-backend/internal/auth"
+	"3d-backend/internal/projects"
 	"github.com/gin-gonic/gin"
 	"github.com/jessevdk/go-flags"
 	"github.com/swaggo/files"
@@ -41,10 +42,20 @@ func main() {
 		protected.GET("/user", auth.UserProfile)
 	}
 
+	project := r.Group("/project")
+	{
+		project.GET("/project-details", projects.GetProject)
+		project.POST("/create-project", projects.CreateProject)
+		project.POST("/create-building", projects.CreateBuilding)
+		project.POST("/create-playground", projects.CreatePlayground)
+		project.PATCH("/update-building", projects.PatchBuilding)
+		project.PATCH("/update-playground", projects.PatchPlayground)
+	}
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	log.Println("Listen on 0.0.0.0:8080")
-	if err := r.Run("0.0.0.0:8080"); err != nil {
+	if err := r.Run("0.0.0.0:8082"); err != nil {
 		log.Panic(err)
 	}
 
